Fixed z-index

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -2,6 +2,7 @@ footer {
   position: absolute;
   bottom: 0;
   left: 50%;
+  z-index: -1;
   text-align: center;
 }
 
